--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calculadora",
   "version": "0.1.0",
+  "homepage": "https://jose2806.github.io/Calculadora",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
